--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # No need for DATABASE_URL to be set if developing from within a devcontainer
 
-SECRET_KEY=lkasjdf09ajsdkfljalsiorj12n3490re9485309irefvn,u90818734902139489230
+SECRET_KEY=****
 DATABASE_URL=sqlite:///dev.db
-SCHEMA=flask_schema
+SCHEMA=my_beers_schema
+FLASK_DEBUG=true
